# haskell2048

./: LICENSE  README.md  haskell2048.cabal  stack.yaml
app/: Main.hs
src/: Game.hs  GameStructure.hs  GameStructureUtil.hs  SaveGameData.hs  UI.hs
